--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
  box-sizing: border-box;
  border: none;
 }
+:root {
+    --color:rgb(247, 228, 202);
+}
 
 body {
- background-color: #272044;
+ background-color:var(--color);
  font-family: "Poppins", sans-serif;
 }
 .wrapper {
@@ -54,12 +57,22 @@ body {
  margin: 30px 0;
  font-weight: 700;
  line-height: 1;
+  color: var(--color);
 }
 .video-bg__content h2 {
  font-size: 40px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
+ color: var(--color);
+}
+.video-bg__content h5 {
+    font-family:  "Poppins", sans-serif;
+    font-weight: 900;
+    line-height: 1.5;
+    letter-spacing: 5px;
+    font-size: 24px;
+     color: var(--color);
 }
 .video-bg__content a {
  text-decoration: none;
