--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
  border: none;
 }
 :root {
-    --color:rgb(247, 228, 202);
+ --color: rgb(247, 228, 202);
 }
 
 body {
- background-color:var(--color);
+ background-color: var(--color);
  font-family: "Poppins", sans-serif;
 }
 .wrapper {
@@ -57,7 +57,7 @@ body {
  margin: 30px 0;
  font-weight: 700;
  line-height: 1;
-  color: var(--color);
+ color: var(--color);
 }
 .video-bg__content h2 {
  font-size: 40px;
@@ -67,12 +67,12 @@ body {
  color: var(--color);
 }
 .video-bg__content h5 {
-    font-family:  "Poppins", sans-serif;
-    font-weight: 900;
-    line-height: 1.5;
-    letter-spacing: 5px;
-    font-size: 24px;
-     color: var(--color);
+ font-family: "Poppins", sans-serif;
+ font-weight: 900;
+ line-height: 1.5;
+ letter-spacing: 5px;
+ font-size: 24px;
+ color: var(--color);
 }
 .video-bg__content a {
  text-decoration: none;
@@ -97,4 +97,38 @@ body {
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.6);
+}
+.main {
+ background-color: white;
+ display: flex;
+ padding: 90px 50px;
+ gap: 60px;
+}
+.photo-odesa img {
+ display: block;
+ width: 500px;
+}
+
+.info h4 {
+    opacity: 0.4;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 5px;
+    color: #272044;
+    text-transform: uppercase;
+}
+.info h2 {
+      font-size: 40px;
+      line-height: 1.5;
+      color: #272044;
+      margin: 20px 0;
+}
+.info p {
+        
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #272044;
+    opacity: 0.7;
 }
